--- a/testing.html
+++ b/testing.html
@@ -532,50 +532,50 @@
           </div>
           <div class="rss-feed" id="feed-CBS">
             <h4>CBS</h4>
-            <div class="feed-content">Loading CBS feed...</div>
+            <div class="feed-content"> CBS feed...</div>
           </div>
           <div class="rss-feed" id="feed-FOX">
             <h4>FOX</h4>
-            <div class="feed-content">Loading FOX feed...</div>
+            <div class="feed-content"> FOX feed...</div>
           </div>
           <div class="rss-feed" id="feed-Yahoo">
             <h4>Yahoo</h4>
-            <div class="feed-content">Loading Yahoo feed...</div>
+            <div class="feed-content"> Yahoo feed...</div>
           </div>
         </div>
         <!-- MLB News Section -->
         <div id="news-MLB" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_6gzCeS4YQ4h2adTs">
             <h4>MLB</h4>
-            <div class="feed-content">Loading MLB feed...</div>
+            <div class="feed-content"> MLB feed...</div>
           </div>
         </div>
         <!-- NBA News Section -->
         <div id="news-NBA" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_ja3fYEA7yigAcmAk">
             <h4>NBA</h4>
-            <div class="feed-content">Loading NBA feed...</div>
+            <div class="feed-content"> NBA feed...</div>
           </div>
         </div>
         <!-- NFL News Section -->
         <div id="news-NFL" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_iiyR3EPoC5QXMnqt">
             <h4>NFL</h4>
-            <div class="feed-content">Loading NFL feed...</div>
+            <div class="feed-content"> NFL feed...</div>
           </div>
         </div>
         <!-- NHL News Section -->
         <div id="news-NHL" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_5c3ZcfSrwvdwdG2Z">
             <h4>NHL</h4>
-            <div class="feed-content">Loading NHL feed...</div>
+            <div class="feed-content"> NHL feed...</div>
           </div>
         </div>
         <!-- MLS News Section -->
         <div id="news-MLS" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_pBOHW7eyjbGkaiZq">
             <h4>MLS</h4>
-            <div class="feed-content">Loading MLS feed...</div>
+            <div class="feed-content"> MLS feed...</div>
           </div>
         </div>
         <!-- Premier League News Section -->
@@ -809,7 +809,7 @@
     Social 2
   </div>
   <div id="social-feed-container-2">
-    <div style="padding: 10px; font-size: 12px;">Loading feed...</div>
+    <div style="padding: 10px; font-size: 12px;">Let's just put some shit in here</div>
   </div>
 </div>
     </div>
