--- a/index.html
+++ b/index.html
@@ -797,6 +797,22 @@
           <div style="padding: 10px; font-size: 12px;">Loading feed...</div>
         </div>
       </div>
+ <!-- DIVIDER BETWEEN SOCIAL PANEL AND MEDIA CENTER PANEL -->
+      <div class="divider"></div>
+
+      <!-- MEDIA CENTER -->
+      <div class="column social" style="padding: 0; margin: 0;">
+        <div
+          id="socialHeader"
+          style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+        >
+          Media Center
+        </div>
+        <!-- Single dynamic container for social feeds -->
+        <div id="social-feed-container">
+          <div style="padding: 10px; font-size: 12px;">Loading feed...</div>
+        </div>
+      </div>
     </div>
 
     <!-- SINGLE RSS.app script load (only once) -->
@@ -1033,12 +1049,12 @@
         ); // LPGA Tour
 fetchFeed(
   "#feed-NCAAF .feed-content",
-  "https://rss.app/feeds/_AnA5shmkBJ7gdzCs.xml"
+  "https://rss.app/feeds/_e8BTSPZYg61J9CYu.xml"
 );
 
 fetchFeed(
   "#feed-PGATour .feed-content",
-  "https://rss.app/feeds/_c2yYJn0ed57eix3y.xml"
+  "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
 );
 
 
@@ -1170,6 +1186,8 @@ fetchFeed(
     </script>
   </body>
 </html>
+
+
 
 
 
