--- a/testing.html
+++ b/testing.html
@@ -801,18 +801,41 @@
       <div class="divider"></div>
 
       <!-- MEDIA CENTER -->
-      <div class="column social" style="padding: 0; margin: 0;">
-        <div
-          id="socialHeader"
-          style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
-        >
-          Media Center
-        </div>
-        <!-- Single dynamic container for social feeds -->
-        <div id="social-feed-container">
-          <div style="padding: 10px; font-size: 12px;">Loading feed...</div>
-        </div>
-      </div>
+     <div class="column social" style="padding: 0; margin: 0;">
+  <div
+    id="socialHeader2"
+    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+  >
+    Social 2
+  </div>
+  <!-- Container for second social content areas -->
+  <div id="second-social-panel">
+    <div id="social2-Home" class="content-section" style="display: none;"></div>
+    <div id="social2-NFL" class="content-section" style="display: none;"></div>
+    <div id="social2-NBA" class="content-section" style="display: none;"></div>
+    <div id="social2-MLB" class="content-section" style="display: none;"></div>
+    <div id="social2-NHL" class="content-section" style="display: none;"></div>
+    <div id="social2-Soccer" class="content-section" style="display: none;"></div>
+    <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAAF" class="content-section" style="display: none;"></div>
+    <div id="social2-PGATour" class="content-section" style="display: none;"></div>
+    <div id="social2-UFC" class="content-section" style="display: none;"></div>
+    <div id="social2-Boxing" class="content-section" style="display: none;"></div>
+    <div id="social2-NASCARCupSeries" class="content-section" style="display: none;"></div>
+    <div id="social2-Tennis" class="content-section" style="display: none;"></div>
+    <div id="social2-WNBA" class="content-section" style="display: none;"></div>
+    <div id="social2-LIVGolf" class="content-section" style="display: none;"></div>
+    <div id="social2-IndyCar" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAAM" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAAW" class="content-section" style="display: none;"></div>
+    <div id="social2-UFL" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAABaseball" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAASoftball" class="content-section" style="display: none;"></div>
+    <div id="social2-MotoGP" class="content-section" style="display: none;"></div>
+    <div id="social2-LPGATour" class="content-section" style="display: none;"></div>
+  </div>
+</div>
+
     </div>
 
     <!-- SINGLE RSS.app script load (only once) -->
@@ -1186,12 +1209,3 @@ fetchFeed(
     </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
