--- a/testing.html
+++ b/testing.html
@@ -1076,10 +1076,13 @@ fetchFeed(
   "#feed-NCAAF .feed-content",
   "https://rss.app/feeds/_e8BTSPZYg61J9CYu.xml"
 );
-
 fetchFeed(
   "#feed-PGATour .feed-content",
   "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
+);
+        fetchFeed(
+  "#feed-FACup .feed-content",
+  "https://rss.app/feeds/_w1qT9O9DzNOQHCFW.xml"
 );
 
 
