--- a/testing.html
+++ b/testing.html
@@ -1084,6 +1084,10 @@ fetchFeed(
   "#feed-FACup .feed-content",
   "https://rss.app/feeds/Wlg6SgkaP1M71ZJK.xml"
 );
+              fetchFeed(
+  "#feed-LigaMX .feed-content",
+  "https://rss.app/feeds/_JgpA2OqGGC8IrApe.xml"
+);
 
 
         // Existing menu functionality
