--- a/testing.html
+++ b/testing.html
@@ -1088,7 +1088,10 @@ fetchFeed(
   "#feed-LigaMX .feed-content",
   "https://rss.app/feeds/_JgpA2OqGGC8IrApe.xml"
 );
-
+      fetchFeed(
+  "#feed-LigaMX .feed-content",
+  "https://rss.app/feeds/_1kbC9b791rPZgjg6.xml"
+);
 
         // Existing menu functionality
         let selectedSection = "Home";
