--- a/testing.html
+++ b/testing.html
@@ -1089,7 +1089,7 @@ fetchFeed(
   "https://rss.app/feeds/_JgpA2OqGGC8IrApe.xml"
 );
       fetchFeed(
-  "#feed-LigaMX .feed-content",
+  "#feed-NWSL .feed-content",
   "https://rss.app/feeds/_1kbC9b791rPZgjg6.xml"
 );
 
