--- a/testing.html
+++ b/testing.html
@@ -1092,6 +1092,10 @@ fetchFeed(
   "#feed-NWSL .feed-content",
   "https://rss.app/feeds/_1kbC9b791rPZgjg6.xml"
 );
+           fetchFeed(
+  "#feed-FormulaOne .feed-content",
+  "https://rss.app/feeds/_69qKKrngeWZusxVz.xml"
+);
 
         // Existing menu functionality
         let selectedSection = "Home";
