--- a/testing.html
+++ b/testing.html
@@ -1096,6 +1096,18 @@ fetchFeed(
   "#feed-FormulaOne .feed-content",
   "https://rss.app/feeds/_69qKKrngeWZusxVz.xml"
 );
+              fetchFeed(
+  "#feed-Ligue1 .feed-content",
+  "https://rss.app/feeds/_9nS7hLmB3aUlWcjH.xml"
+);
+                fetchFeed(
+  "#feed-UEFAEuropaLeague .feed-content",
+  "https://rss.app/feeds/_Op8jopGsYny0gt0e.xml"
+);
+                fetchFeed(
+  "#feed-UEFAConferenceLeague .feed-content",
+  "https://rss.app/feeds/_BjsIqdRuSa1z3U9p.xml"
+);
 
         // Existing menu functionality
         let selectedSection = "Home";
