--- a/testing.html
+++ b/testing.html
@@ -806,7 +806,7 @@
     id="socialHeader2"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
   >
-    Social 2
+    Media Center
   </div>
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
