--- a/testing.html
+++ b/testing.html
@@ -802,7 +802,12 @@
 
       <!-- MEDIA CENTER -->
  <div class="column media-center" style="padding: 0; margin: 0;">
-  <div id="socialHeader2" ...>Media Center</div>
+  <div
+          id="socialHeader2"
+          style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+        >
+          Social
+        </div>
 
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
