--- a/testing.html
+++ b/testing.html
@@ -801,14 +801,13 @@
       <div class="divider"></div>
 
       <!-- MEDIA CENTER -->
- <div class="column media-center" style="padding: 0; margin: 0;">
+     <div class="column social" style="padding: 0; margin: 0;">
   <div
-          id="socialHeader2"
-          style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
-        >
-          Media Center
-        </div>
-
+    id="socialHeader2"
+    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+  >
+    Social 2
+  </div>
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
     <div id="social2-Home" class="content-section" style="display: none;"></div>
@@ -1255,3 +1254,6 @@ document.querySelectorAll("#menuList li[data-section]").forEach(item => {
     </script>
   </body>
 </html>
+
+
+
