--- a/testing.html
+++ b/testing.html
@@ -801,7 +801,7 @@
       <div class="divider"></div>
 
       <!-- MEDIA CENTER -->
-     <div class="column social" style="padding: 0; margin: 0;">
+     <div class="column media-center" style="padding: 0; margin: 0;">
   <div
     id="socialHeader2"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
@@ -1160,9 +1160,8 @@ fetchFeed(
             document.querySelectorAll(".news .content-section").forEach(
               s => (s.style.display = "none")
             );
-            document.querySelectorAll(".social .content-section").forEach(
-              s => (s.style.display = "none")
-            );
+            document.querySelectorAll("#social-feed-container .content-section").forEach(s => s.style.display = "none");
+
             const news = document.getElementById("news-" + section);
             const social = document.getElementById("social-" + section);
             if (news) {
