--- a/testing.html
+++ b/testing.html
@@ -836,6 +836,17 @@
     <div id="social2-MotoGP" class="content-section" style="display: none;"></div>
     <div id="social2-LPGATour" class="content-section" style="display: none;"></div>
   </div>
+        <!-- DIVIDER BETWEEN SOCIAL PANEL AND MEDIA CENTER PANEL -->
+      <div class="divider"></div>
+
+         <!-- MEDIA CENTER -->
+     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: black">
+  <div
+    id="discussionHeader"
+    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+  >
+    Discussion
+  </div>
 </div>
 
     </div>
