--- a/testing.html
+++ b/testing.html
@@ -841,7 +841,7 @@
       <div class="divider"></div>
 
          <!-- MEDIA CENTER -->
-     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: black">
+     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: white">
   <div
     id="discussionHeader"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
