--- a/testing.html
+++ b/testing.html
@@ -848,7 +848,34 @@
   >
     Discussion
   </div>
-
+<!-- Container for second social content areas -->
+  <div id="second-social-panel">
+    <div id="discussion-Home" class="content-section" style="display: none;"></div>
+    <div id="discussion-NFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NBA" class="content-section" style="display: none;">
+      <rssapp-feed id="X8zCF7HteOBdTUyk"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-MLB" class="content-section" style="display: none;"></div>
+    <div id="discussion-NHL" class="content-section" style="display: none;"></div>
+    <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
+    <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAF" class="content-section" style="display: none;"></div>
+    <div id="discussion-PGATour" class="content-section" style="display: none;"></div>
+    <div id="discussion-UFC" class="content-section" style="display: none;"></div>
+    <div id="discussion-Boxing" class="content-section" style="display: none;"></div>
+    <div id="discussion-NASCARCupSeries" class="content-section" style="display: none;"></div>
+    <div id="discussion-Tennis" class="content-section" style="display: none;"></div>
+    <div id="discussion-WNBA" class="content-section" style="display: none;"></div>
+    <div id="discussion-LIVGolf" class="content-section" style="display: none;"></div>
+    <div id="discussion-IndyCar" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAM" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAW" class="content-section" style="display: none;"></div>
+    <div id="discussion-UFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAABaseball" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAASoftball" class="content-section" style="display: none;"></div>
+    <div id="discussion-MotoGP" class="content-section" style="display: none;"></div>
+    <div id="discussion-LPGATour" class="content-section" style="display: none;"></div>
+  </div>
 
     </div>
 
